--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
     "party": "yarn run build-zipped && yarn run check-file-size"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
     "archiver": "^3.0.0",
     "clean-webpack-plugin": "^3.0.0",
+    "eslint": "^7.7.0",
     "html-webpack-plugin": "^4.3.0",
     "raw-loader": "^3.0.0",
     "terser-webpack-plugin": "^1.3.0",
     "ts-loader": "^8.0.2",
+    "tsickle": "^0.39.1",
+    "tsickle-loader": "^0.5.0",
     "tslib": "^2.0.1",
-    "typescript": "^3.9.7",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.2",
     "url-loader": "^4.1.0",
     "webpack": "^4.36.1",
     "webpack-bundle-analyzer": "^3.8.0",
@@ -27,6 +33,8 @@
     "webpack-merge": "^5.1.1"
   },
   "dependencies": {
+    "closure-webpack-plugin": "^2.3.0",
+    "google-closure-compiler": "^20200719.0.0",
     "kontra": "^7.1.2",
     "tinyfont": "^1.3.1"
   }
