Improved echo animation

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js13k-webpack-typescript-party",
+  "name": "lost-vision",
   "version": "1.0.0",
   "private": false,
   "license": "MIT",
